# n-body-cuda

./: Makefile  TODO  energy.txt  notes.md
include/glad/: glad.h
literature/: cuda-programming-guide  marcvivas-n-body.txt  nvidia-gpugems3.txt  position-Algorithms.txt
log/: lastEnergy.txt  lastSimulation.txt
presentation/: nbody - Presentation.pptx
ref/: kernel.cu
src/: CMakeLists.txt  autotest.cpp  autotest.h  calc.cu  calc.h  first-idea.c  glad.c  main.c++  main.cpp  main.cu  particle.c  visuals.cpp  visuals.h
src/vispy/: eval.py  evalConfig.py  evalEnergy.py
testresults/100KS_10uDT_1KN_16P_EULER/: energy.txt
testresults/10KS-100nDT-1KN-16P-EULER/: energy.txt  test.txt
testresults/10KS-100nDT-1KN-16P-VERLET/: test.txt
testresults/10KS-100nDT-1KN-32P-EULER/: test.txt
testresults/10KS-100nDT-1KN-64P-EULER/: test.txt
testresults/10KS-100nDT-1KN-64P-VERLET/: test.txt
testresults/10KS-100nDT-2KN-16P-EULER/: test.txt
testresults/10KS-100nDT-2KN-32P-EULER/: test.txt
testresults/10KS-100nDT-2KN-64P-EULER/: test.txt
testresults/10KS-100nDT-4KN-16P-EULER/: test.txt
testresults/10KS-100nDT-4KN-16P-VERLET/: test.txt
testresults/10KS-100nDT-4KN-32P-EULER/: test.txt
testresults/10KS-100nDT-4KN-64P-EULER/: test.txt
testresults/10KS-10uDT-1KN-16P-EULER/: test.txt
testresults/10KS-10uDT-2KN-64P-VERLET/: test.txt
tests/: density_test.json  n_p_test.json  numXdensity_test.json  perf_test.json  time_step_stability_test - verlet.json  time_step_stability_test.json
vsproj/: lastSimulation.txt  nbody.sln  nbody.vcxproj  nbody.vcxproj.filters
(+23 files in other folders)
